--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="gym, program, strength, powerlifting">
 <meta name="author" content="db">
-<title>MuscleMommy🍑</title>
+<title>MuscleMommyt🍑</title>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="muscle_mommy.css" type="text/css">
 <script src="muscle_mommy.js"></script>
